cabal-version: 2.4

name:    bytevector
version: 0.1.0.0

author:     jake
maintainer: jacobleach@protonmail.com

extra-source-files:
  CHANGELOG.md
  README.md

common common
  default-language: Haskell2010

  default-extensions:
    BangPatterns BlockArguments DataKinds DerivingVia ExplicitNamespaces GADTs
    ImportQualifiedPost KindSignatures LambdaCase MagicHash PatternSynonyms
    PolyKinds RankNTypes RoleAnnotations ScopedTypeVariables
    StandaloneKindSignatures TupleSections TypeApplications ViewPatterns
    UnboxedTuples UnliftedNewtypes

  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

  build-depends:
    , base
    , ghc-prim
    , primitive

library
  import:         common
  hs-source-dirs: src

  exposed-modules:
    Data.ByteVector
    Data.ByteVector.Mutable
    Data.ByteVector.Mutable.Struct
    Data.ByteVector.Mutable.Struct.Rep
    Data.ByteVector.Mutable.Struct.Unlifted
    Data.ByteVector.Mutable.Unlifted
    Data.Bool.Unlifted
    Data.Int.Unlifted

test-suite test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  build-depends:
    , bytevector
    , hedgehog
    , tasty
    , tasty-hedgehog

  other-modules:
    Test.Data.ByteVector
    Test.Data.ByteVector.Conversion
    Test.Data.ByteVector.Gen
    Test.Data.Int.Gen
    Test.Data.Int.Unboxed
    Test.Gen

benchmark benchmark
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is:        Bench.hs

  build-depends:
    , criterion
    , bytestring
    , bytevector

  other-modules:
    Bench.Int
    Bench.Vector
