cabal-version: 2.4

name:    bytevector
version: 0.0.0

author:     jake
maintainer: jacobleach@protonmail.com

extra-source-files:
  CHANGELOG.md
  README.md

common common
  default-language: Haskell2010

  default-extensions:
    BangPatterns BlockArguments CPP DataKinds DerivingVia ExplicitNamespaces
    ForeignFunctionInterface GADTs ImportQualifiedPost KindSignatures LambdaCase
    MagicHash NegativeLiterals PatternSynonyms PolyKinds RankNTypes
    RoleAnnotations ScopedTypeVariables StandaloneKindSignatures TupleSections
    TypeApplications ViewPatterns UnboxedTuples UnliftedNewtypes

  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

  build-depends:
    , base
    , ghc-prim
    , primitive

library
  import:         common
  hs-source-dirs: src
  ghc-options:    -O2

  exposed-modules:
    Data.ByteVector
    Data.ByteVector.Mutable
    Data.ByteVector.Mutable.Struct
    Data.ByteVector.Mutable.Unlifted
    Data.Int.Unlifted

  build-depends:
    , unlifted-bool >= 1.0.0

test-suite test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  build-depends:
    , bytevector
    , hedgehog
    , tasty
    , tasty-hedgehog

  other-modules:
    Test.Data.ByteVector
    Test.Data.ByteVector.Conversion
    Test.Data.ByteVector.Gen
    Test.Data.Int.Gen
    Test.Data.Int.Unboxed
    Test.Gen

benchmark benchmark
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is:        Bench.hs

  ghc-options:
    -O2

  build-depends:
    , criterion
    , bytestring
    , bytevector

  other-modules:
    Bench.Int
    Bench.Vector

source-repository head
  type:     git
  location: https://github.com/riz0id/bytevector
